syntax = "proto3";

option csharp_namespace = "CreditCard";

package CreditCard;

message CreateCreditCardRequest {
  string CardNumber = 1;
  string CardHolderName = 2;
}

message CreditCardResponse {
  string Id = 1;
  string CardNumber = 2;
  string CardHolderName = 3;
}


service CreditCardService {
  rpc CreateCreditCard (CreateCreditCardRequest) returns (CreditCardResponse);
}